Fixes issue with scrollbar on EmuDeck theme

--- a/src/renderer/styles/themes.global.scss
+++ b/src/renderer/styles/themes.global.scss
@@ -481,7 +481,7 @@
         .items {
           height: 100%;
           overflow-y: auto;
-          padding-bottom: 10px;
+          padding-bottom: 100px;
           .inputContainer,
           .inlineGroup.inlineGroup.inlineGroup {
             margin: 0;
